tests/models/struct/named/usize/fail/min_length.rs
use dade::model;
#[model]
struct TestModel {
    #[field(min_length = 2)]
    value: usize,
}
fn main() {}
